--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.App
+{
+  background-image: url('./images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .bott{
   position: relative;
   bottom: inherit;
@@ -5,12 +11,14 @@
 
 .body{
   height: 100%;
+  background-image: "./images/background.jpg"
 }
 
 .serv{
   padding: 40px 0px; 
   background-position: 50% 40px;
   text-align: center;
+  color: black;
 }
 
 
