--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,8 @@
   color: black;
 }
 
-
-.news {
-  text-align: center;
-  
- 
+.navbar.navbar-light .breadcrumb .nav-item .nav-link, .navbar.navbar-light .navbar-nav .nav-item .nav-link{
+   padding-top: 0;
 }
 
 .App-logo {
