--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   background-image: "./images/background.jpg"
 }
 
+.form-group{
+  padding-left: 20px;
+}
+
 .serv{
   padding: 40px 0px; 
   background-position: 50% 40px;
