--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,14 @@
   padding-left: 20px;
 }
 
+.Navbar-brand{
+  margin: 0;
+}
+
+.pad{
+  padding-top: 20px;
+}
+
 .serv{
   padding: 40px 0px; 
   background-position: 50% 40px;
